--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -65,6 +65,90 @@ h1:hover{
   cursor: pointer;
 }
 
+/* Estilização do Footer */
+.clear{
+  clear: both;
+}
+footer{
+  padding: 40px 2%;
+  background-color: #161616;
+}
+footer .container{
+  max-width: 100%;
+}
+footer .footer-block{
+  float: left;
+  width: 25%;
+}
+.footer-block h2{
+  color: #727171;
+  font-weight: normal;
+  font-size: 18px;
+}
+.footer-block p, a{
+  margin-top: 5px;
+  padding-top: 3px;
+  text-decoration: none;
+  color: #cac5c5;
+  font-size: 11px;
+}
+footer .social{
+  padding-top: 25px;
+}
+footer .sobre{
+  padding-left: 30px;
+}
+/* hover para navbar
+.underline{
+  position: relative;
+}
+*/
 
+/* Social Icons */
+.fa-brands{
+  padding: 3px 3px;
+  margin: 4px 2px;
+  opacity: 0.4;
+  -webkit-transition: -webkit-transform .8s ease-in-out;
+  -ms-transition: -ms-transform .8s ease-in-out;
+    transition: transform .8s ease-in-out;  
+}
+/* Fim da estilização do Footer */
 
+/* Efeito Hoover */
 
+/* hover para navbar 
+.underline::before{
+  content: '';
+  position: absolute;
+  bottom: -2px;
+  right: 0;
+  width: 0;
+  height: 2px;
+  background-color: #0074D9;
+  transition: width 0.6s cubic-bezier(0.25, 1, 0.5, 1);
+}
+*/
+
+/* Efeito de Girar Social Icons */
+.fa-brands:hover {
+  transform:rotate(360deg);
+  -ms-transform:rotate(360deg);
+  -webkit-transform:rotate(360deg);
+  opacity: 1;
+  color: rgb(255, 255, 255);
+}
+ /* Hover Link */
+ footer .link:hover {
+  color: white;
+}
+
+/* 
+@media (hover: hover) and (pointer: fine) {
+  .underline:hover::before{
+    left: 0;
+    right: auto;
+    width: 100%;
+  }
+}
+*/
